# cuckoo

./: .gitignore  CMakeLists.txt  README.md
example/: example_elf.c  example_process.c  example_shellcode32  example_shellcode64  libexample.c  libexample.h  watchdog.sh
include/: cuckoo.h  elfinject.h  inject.h  library.h  maps.h  shellcode.h  utils.h
src/: CMakeLists.txt  cuckoo.c  cuckoo.h  elfinject32.c  elfinject64.c  inject.c  inject.h  library.c  library.h  library32.c  library64.c  main.c  maps.c  maps.h  shellcode.c  shellcode.h  shellcode32.c  shellcode64.c  shellcode_example.c  utils.c  utils.h
test/: CMakeLists.txt  libtest.c  libtest.h  test_process  test_process.c  watchdog.sh
